--- a/Commute/Assets/_/Features/Spawner/RunTime/Spawn.asmdef
+++ b/Commute/Assets/_/Features/Spawner/RunTime/Spawn.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Spawn",
     "rootNamespace": "Spawn",
-    "references": ["GUID:e6635214ea1b42241a0872642be990ac"],
+    "references": [
+        "GUID:e6635214ea1b42241a0872642be990ac"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
